@@ -14,6 +14,11 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+19 November 2014 G. Folger(hadr-man-V10-00-17)
+---------------------------------------------------
+- G4HadronicProcess::CheckResult(): Add check for dynamic mass 
+    to correspond to PDG mass within ~10%. 
+	 
 12 November 2014 V. Ivanchenko (hadr-man-V10-00-16)
 ---------------------------------------------------
 - G4HadronicProcessStore -fixed computation of cross sections for ions
